1. 完成剩下的頁面設計 2. 建好3個Entity並測試完成

--- a/src/main/resources/templates/Default.html
+++ b/src/main/resources/templates/Default.html
@@ -6,7 +6,7 @@
 
     <title>Default</title>
 
-    <link rel="stylesheet" href="../static/stylesheet/bootstrap.min.css">
+    <link rel="stylesheet" th:href="@{/stylesheet/bootstrap.min.css}">
     <script src="../static/script/bootstrap.min.js"></script>
     <script src="../static/script/jquery-3.6.0.min.js"></script>
 
@@ -54,7 +54,6 @@
             </tr>
         </table>
     </div>
-
 </body>
 
 </html>
