--- a/src/main/resources/templates/SystemAdmin/AccountingDetail.html
+++ b/src/main/resources/templates/SystemAdmin/AccountingDetail.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>流水帳分類管理</title>
+    <title>流水帳管理</title>
 
     <link href="../../static/stylesheet/admin.css" rel="stylesheet" />
 
@@ -30,26 +30,22 @@
             padding-left: 50px;
         }
 
-        .category-table-div {
-            min-width: 400px;
-            max-width: 75%;
-            min-height: 350px;
+        select {
+            display: inline-block !important;
+            max-width: 200px;
         }
 
-        tr > th:first-child {
-            width: 50px;
-            padding-left: 20px;
+        .account-edit-div {
+            max-width: 530px;
         }
 
-        .ucPager-div {
-            min-width: 400px;
-            max-width: 75%;
-            display: flex;
-            justify-content: center;
+        .account-edit-div label {
+            width: 80px;
+            text-align: right;
         }
 
-        .ucPager-div>nav {
-            margin: 0 auto;
+        #btnSave {
+            margin-left: 20px;
         }
     </style>
 </head>
@@ -104,11 +100,11 @@
                         </a>
 
                         <div class="sb-sidenav-menu-heading"><i class="fas fa-folder-open"></i>流水帳紀錄</div>
-                        <a class="nav-link" href="AccountingList.html">
+                        <a class="nav-link active" href="AccountingList.html">
                             <div class="sb-nav-link-icon"><i class="fas fa-file"></i></div>
                             流水帳管理
                         </a>
-                        <a class="nav-link active" href="CategoryList.html">
+                        <a class="nav-link" href="CategoryList.html">
                             <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
                             流水帳分類管理
                         </a>
@@ -119,86 +115,63 @@
         </div>
         <div id="layoutSidenav_content">
             <div class="pageContent">
-                <h4>流水帳分類管理</h4>
+                <h4>流水帳管理</h4>
 
                 <!-- bread crumb -->
                 <nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='currentColor'/%3E%3C/svg%3E&#34;);"
                     aria-label="breadcrumb">
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item"><a href="#">流水帳紀錄</a></li>
-                        <li class="breadcrumb-item active" aria-current="page">流水帳分類管理</li>
+                        <li class="breadcrumb-item active" aria-current="page">流水帳管理</li>
                     </ol>
                 </nav>
 
-                <!-- Add & Delete button -->
-                <div>
-                    <button type="button" class="btn btn-outline-success">Add</button>
-                    <button type="button" class="btn btn-outline-danger">Delete</button>
-                </div>
+                <!-- Input -->
+                <div class="account-edit-div">
+                    <div class="mb-3 row">
+                        <label for="caption" class="col-form-label">收 / 支</label>
+                        <div class="col-auto pt-1">
+                            <select class="form-select form-select-sm mb-3" aria-label=".form-select-sm example">
+                                <option valur="in" selected>IN</option>
+                                <option value="out">OUT</option>
+                              </select>
+                        </div>
+                    </div>
+                    <div class="mb-3 row">
+                        <label for="caption" class="col-form-label">分類</label>
+                        <div class="col-auto pt-1">
+                            <select class="form-select form-select-sm mb-3" aria-label=".form-select-sm example">
+                                <option selected>我的分類1</option>
+                                <option>我的分類2</option>
+                              </select>
+                        </div>
+                    </div>
+                    <div class="mb-3 row">
+                        <label for="amount" class="col-form-label">金額</label>
+                        <div class="col-auto">
+                            <input type="text" class="form-control" id="amount" name="amount">
+                        </div>
+                    </div>
+                    <div class="mb-3 row">
+                        <label for="caption" class="col-form-label">標題</label>
+                        <div class="col-auto">
+                            <input type="text" class="form-control" id="caption" name="caption">
+                        </div>
+                    </div>
+                    <div class="mb-3 row">
+                        <label for="remark" class="col-form-label">備註</label>
+                        <div class="col">
+                            <textarea id="remark" name="remark" rows="8" cols="50">
 
-                <!-- Table -->
-                <div class="category-table-div">
-                    <table class="table table-striped">
-                        <thead>
-                            <tr>
-                                <th scope="col"><i class="fas fa-trash"></i></th>
-                                <th scope="col">建立日期</th>
-                                <th scope="col">分類</th>
-                                <th scope="col">流水帳數</th>
-                                <th scope="col">Act</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <th scope="row">
-                                    <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault1">
-                                    </div>
-                                </th>
-                                <td>2021/7/5</td>
-                                <td>我的分類1</td>
-                                <td>4</td>
-                                <td><a href="#">Edit</a></td>
-                            </tr>
-                            <tr>
-                                <th scope="row">
-                                    <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault2">
-                                    </div>
-                                </th>
-                                <td>2021/7/5</td>
-                                <td>我的分類2</td>
-                                <td>2</td>
-                                <td><a href="#">Edit</a></td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-
-                <!-- pagination -->
-                <div class="ucPager-div">
-                    <nav aria-label="Page navigation example">
-                        <ul class="pagination">
-                            <li class="page-item">
-                                <a class="page-link" href="#" aria-label="Previous">
-                                    <span aria-hidden="true">&laquo;</span>
-                                </a>
-                            </li>
-                            <li class="page-item"><a class="page-link" href="#">1</a></li>
-                            <li class="page-item"><a class="page-link" href="#">2</a></li>
-                            <li class="page-item"><a class="page-link" href="#">3</a></li>
-                            <li class="page-item">
-                                <a class="page-link" href="#" aria-label="Next">
-                                    <span aria-hidden="true">&raquo;</span>
-                                </a>
-                            </li>
-                        </ul>
-                    </nav>
+                            </textarea>
+                        </div>
+                    </div>
+                    <button type="button" class="btn btn-outline-primary" id="btnSave">Save</button>
                 </div>
             </div>
         </div>
     </div>
-
+    
 </body>
 
 </html>
