--- a/src/main/resources/templates/SystemAdmin/AccountingList.html
+++ b/src/main/resources/templates/SystemAdmin/AccountingList.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>流水帳分類管理</title>
+    <title>流水帳管理</title>
 
     <link href="../../static/stylesheet/admin.css" rel="stylesheet" />
 
@@ -30,7 +30,13 @@
             padding-left: 50px;
         }
 
-        .category-table-div {
+        .total-this-month {
+            margin-left: 6%;
+            font-size: 18px;
+            font-weight: bold;
+        }
+
+        .accounting-table-div {
             min-width: 400px;
             max-width: 75%;
             min-height: 350px;
@@ -104,11 +110,11 @@
                         </a>
 
                         <div class="sb-sidenav-menu-heading"><i class="fas fa-folder-open"></i>流水帳紀錄</div>
-                        <a class="nav-link" href="AccountingList.html">
+                        <a class="nav-link active" href="AccountingList.html">
                             <div class="sb-nav-link-icon"><i class="fas fa-file"></i></div>
                             流水帳管理
                         </a>
-                        <a class="nav-link active" href="CategoryList.html">
+                        <a class="nav-link" href="CategoryList.html">
                             <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
                             流水帳分類管理
                         </a>
@@ -119,14 +125,14 @@
         </div>
         <div id="layoutSidenav_content">
             <div class="pageContent">
-                <h4>流水帳分類管理</h4>
+                <h4>流水帳管理</h4>
 
                 <!-- bread crumb -->
                 <nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='currentColor'/%3E%3C/svg%3E&#34;);"
                     aria-label="breadcrumb">
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item"><a href="#">流水帳紀錄</a></li>
-                        <li class="breadcrumb-item active" aria-current="page">流水帳分類管理</li>
+                        <li class="breadcrumb-item active" aria-current="page">流水帳管理</li>
                     </ol>
                 </nav>
 
@@ -134,17 +140,20 @@
                 <div>
                     <button type="button" class="btn btn-outline-success">Add</button>
                     <button type="button" class="btn btn-outline-danger">Delete</button>
+                    <span class="total-this-month">小記 490 元</span>
                 </div>
 
                 <!-- Table -->
-                <div class="category-table-div">
+                <div class="accounting-table-div">
                     <table class="table table-striped">
                         <thead>
                             <tr>
                                 <th scope="col"><i class="fas fa-trash"></i></th>
                                 <th scope="col">建立日期</th>
                                 <th scope="col">分類</th>
-                                <th scope="col">流水帳數</th>
+                                <th scope="col">收/支</th>
+                                <th scope="col">金額</th>
+                                <th scope="col">標題</th>
                                 <th scope="col">Act</th>
                             </tr>
                         </thead>
@@ -152,12 +161,27 @@
                             <tr>
                                 <th scope="row">
                                     <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault1">
+                                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                                     </div>
                                 </th>
                                 <td>2021/7/5</td>
                                 <td>我的分類1</td>
-                                <td>4</td>
+                                <td>收入</td>
+                                <td>2000</td>
+                                <td>工作收入</td>
+                                <td><a href="#">Edit</a></td>
+                            </tr>
+                            <tr>
+                                <th scope="row">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault1">
+                                    </div>
+                                </th>
+                                <td>2021/7/5</td>
+                                <td>我的分類2</td>
+                                <td>支出</td>
+                                <td><span class="money-out">(100)</span></td>
+                                <td>買便當</td>
                                 <td><a href="#">Edit</a></td>
                             </tr>
                             <tr>
@@ -168,7 +192,9 @@
                                 </th>
                                 <td>2021/7/5</td>
                                 <td>我的分類2</td>
-                                <td>2</td>
+                                <td>支出</td>
+                                <td><span class="money-out">(150)</span></td>
+                                <td>買晚餐</td>
                                 <td><a href="#">Edit</a></td>
                             </tr>
                         </tbody>
