--- a/src/main/resources/templates/SystemAdmin/CategoryDetail.html
+++ b/src/main/resources/templates/SystemAdmin/CategoryDetail.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Admin Sample</title>
+    <title>流水帳分類管理</title>
 
     <link href="../../static/stylesheet/admin.css" rel="stylesheet" />
 
@@ -100,7 +100,7 @@
                             <div class="sb-nav-link-icon"><i class="fas fa-file"></i></div>
                             流水帳管理
                         </a>
-                        <a class="nav-link" href="CategoryList.html">
+                        <a class="nav-link active" href="CategoryList.html">
                             <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
                             流水帳分類管理
                         </a>
@@ -138,7 +138,7 @@
                             </textarea>
                         </div>
                     </div>
-                        <button type="button" class="btn btn-outline-primary" id="btnLogin">Save</button>
+                    <button type="button" class="btn btn-outline-primary" id="btnSave">Save</button>
                 </div>
             </div>
         </div>
