--- a/src/main/resources/templates/SystemAdmin/AccountingDetail.html
+++ b/src/main/resources/templates/SystemAdmin/AccountingDetail.html
@@ -9,13 +9,12 @@
     <meta name="author" content="" />
     <title>流水帳管理</title>
 
-    <link href="../../static/stylesheet/admin.css" rel="stylesheet" />
+    <link href="stylesheet/admin.css" rel="stylesheet" />
 
-
-    <script src="../../static/script/fontawesome-all.js"></script>
-    <script src="../../static/script/bootstrap.min.js"></script>
-    <script src="../../static/script/admin.js"></script>
-
+    <script src="script/fontawesome-all.js"></script>
+    <script src="script/bootstrap.min.js"></script>
+    <script src="script/admin.js"></script>
+    
     <style>
         .sb-sidenav-menu-heading {
             font-size: .9rem !important;
@@ -88,23 +87,23 @@
                     <div class="nav">
 
                         <div class="sb-sidenav-menu-heading"><i class="fas fa-folder-open"></i>管理者後台</div>
-                        <a class="nav-link" href="UserList.html">
+                        <a class="nav-link" th:href="@{/userList}">
                             <div class="sb-nav-link-icon"><i class="fas fa-users"></i></div>
                             會員管理
                         </a>
 
                         <div class="sb-sidenav-menu-heading"><i class="fas fa-folder-open"></i>後台管理</div>
-                        <a class="nav-link" href="UserProfile.html">
+                        <a class="nav-link" th:href="@{/userProfile}">
                             <div class="sb-nav-link-icon"><i class="fas fa-user-cog"></i></div>
                             個人資訊
                         </a>
 
                         <div class="sb-sidenav-menu-heading"><i class="fas fa-folder-open"></i>流水帳紀錄</div>
-                        <a class="nav-link active" href="AccountingList.html">
+                        <a class="nav-link active" th:href="@{/accountingList}">
                             <div class="sb-nav-link-icon"><i class="fas fa-file"></i></div>
                             流水帳管理
                         </a>
-                        <a class="nav-link" href="CategoryList.html">
+                        <a class="nav-link" th:href="@{/categoryList}">
                             <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
                             流水帳分類管理
                         </a>
