--- a/src/main/resources/templates/SystemAdmin/UserProfile.html
+++ b/src/main/resources/templates/SystemAdmin/UserProfile.html
@@ -9,12 +9,11 @@
     <meta name="author" content="" />
     <title>個人資訊</title>
 
-    <link href="../../static/stylesheet/admin.css" rel="stylesheet" />
+    <link href="stylesheet/admin.css" rel="stylesheet" />
 
-
-    <script src="../../static/script/fontawesome-all.js"></script>
-    <script src="../../static/script/bootstrap.min.js"></script>
-    <script src="../../static/script/admin.js"></script>
+    <script src="script/fontawesome-all.js"></script>
+    <script src="script/bootstrap.min.js"></script>
+    <script src="script/admin.js"></script>
 
     <style>
         .sb-sidenav-menu-heading {
@@ -73,7 +72,6 @@
                 <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown"
                     aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item" href="UserProfile.html">個人資訊</a></li>
                     <li>
                         <hr class="dropdown-divider" />
                     </li>
@@ -88,24 +86,24 @@
                 <div class="sb-sidenav-menu">
                     <div class="nav">
 
-                        <div class="sb-sidenav-menu-heading"><i class="fas fa-folder-open"></i>管理者後台</div>
-                        <a class="nav-link" href="UserList.html">
+                        <div th:if="${isManager}" class="sb-sidenav-menu-heading"><i class="fas fa-folder-open"></i>管理者後台</div>
+                        <a th:if="${isManager}" class="nav-link" th:href="@{/userList}">
                             <div class="sb-nav-link-icon"><i class="fas fa-users"></i></div>
                             會員管理
                         </a>
 
                         <div class="sb-sidenav-menu-heading"><i class="fas fa-folder-open"></i>後台管理</div>
-                        <a class="nav-link active" href="UserProfile.html">
+                        <a class="nav-link active" th:href="@{/userProfile}">
                             <div class="sb-nav-link-icon"><i class="fas fa-user-cog"></i></div>
                             個人資訊
                         </a>
 
                         <div class="sb-sidenav-menu-heading"><i class="fas fa-folder-open"></i>流水帳紀錄</div>
-                        <a class="nav-link" href="AccountingList.html">
+                        <a class="nav-link" th:href="@{/accountingList}">
                             <div class="sb-nav-link-icon"><i class="fas fa-file"></i></div>
                             流水帳管理
                         </a>
-                        <a class="nav-link" href="CategoryList.html">
+                        <a class="nav-link" th:href="@{/categoryList}">
                             <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
                             流水帳分類管理
                         </a>
@@ -122,7 +120,7 @@
                 <nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='currentColor'/%3E%3C/svg%3E&#34;);"
                     aria-label="breadcrumb">
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="#">後台管理</a></li>
+                        <li class="breadcrumb-item">後台管理</li>
                         <li class="breadcrumb-item active" aria-current="page">個人資訊</li>
                     </ol>
                 </nav>
@@ -147,7 +145,6 @@
                     </table>
                     <button type="button" class="btn btn-outline-primary" id="btnSave">存檔</button>
                 </div>
-
 
             </div>
         </div>
