--- a/src/main/resources/templates/SystemAdmin/CategoryList.html
+++ b/src/main/resources/templates/SystemAdmin/CategoryList.html
@@ -66,7 +66,7 @@
 
                 <!-- Add & Delete button -->
                 <div>
-                    <button type="button" class="btn btn-outline-success">Add</button>
+                    <a th:href="@{/categoryDetail}" role="button" class="btn btn-outline-success">Add</a>
                     <button type="button" class="btn btn-outline-danger">Delete</button>
                 </div>
 
